fix: updated spacing for tourtip and drawer-dialog

--- a/src/less/mixins/private/dialog-mixins.less
+++ b/src/less/mixins/private/dialog-mixins.less
@@ -46,11 +46,11 @@
     max-width: calc(100% - 32px);
 }
 
-.dialog-header-content() {
+.dialog-header-content(@top-margin: @spacing-200) {
     display: flex;
     // Fix for Safari not honoring min-height
     flex-shrink: 0;
-    margin: @spacing-200 @spacing-200 0;
+    margin: @top-margin @spacing-200 0;
     position: relative;
 
     h1,
