--- a/src/less/tourtip/tourtip.less
+++ b/src/less/tourtip/tourtip.less
@@ -11,14 +11,14 @@ span.tourtip {
 }
 
 .tourtip__overlay {
-    .bubble();
+    .bubble(@border-radius-value: border-radius-100);
 
     display: none;
     position: absolute;
 }
 
 .tourtip__mask {
-    .bubble-mask();
+    .bubble-mask(@border-radius-value: border-radius-100);
     .background-color-token(tourtip-background-color, color-background-primary);
     .color-token(tourtip-foreground-color, color-foreground-primary);
 }
@@ -28,7 +28,7 @@ span.tourtip__mask {
 }
 
 .tourtip__cell {
-    .bubble-cell();
+    .bubble-cell(@tourtip-spacing: @spacing-200);
 
     flex-wrap: wrap;
 
@@ -114,9 +114,9 @@ button.tourtip__close > svg {
 }
 
 .tourtip__heading {
-    font-size: 1em;
+    font-size: @font-size-20;
     font-weight: bold;
-    margin: 0 0 @spacing-50;
+    margin: 0 0 @spacing-100;
 }
 
 span.tourtip__heading {
